Prevent pop up box from overflowing to the left

--- a/static/styles/spreadsheet/filter_styles.css
+++ b/static/styles/spreadsheet/filter_styles.css
@@ -11,6 +11,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 10px;
     display: none;
+    width: 200px;
     border-radius: 10px;
 }
 
